<resources>
    <string name="app_name">CS3270A8 Pickle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID:</string>
    <string name="name_required">Name (Required):</string>
    <string name="course_code">Course Code:</string>
    <string name="start_at">Start At:</string>
    <string name="end_at">End At:</string>
    <string name="name">Name:</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="permanently_delete">This will permanently delete the course.</string>
    <string name="edit">Edit</string>
</resources>
